--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "description": "",
   "dependencies": {
     "chalk": "^5.4.1",
+    "cloudinary": "^2.6.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "gravatar": "^1.8.2",
     "joi": "^17.13.3",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   }
