--- a/config/.env
+++ b/config/.env
@@ -6,3 +6,9 @@ SECRET_KEY=zT3V0rOq4tVK8hgx
 CLDNRY_CLOUD_NAME=dscrke8jd
 CLDNRY_API_KEY=847215415596659
 CLDNRY_API_SECRET=XnGXBMlkZmVEqbEyuEo6t3lzAm8
+
+PORTSQL=3306
+MARIADB_HOST=localhost
+MARIADB_USER=aleksandr
+MARIADB_PASSWORD=888Infinity
+MARIADB_DB=world
