--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   }
