--- a/config/.env
+++ b/config/.env
@@ -9,6 +9,6 @@ CLDNRY_API_SECRET=XnGXBMlkZmVEqbEyuEo6t3lzAm8
 
 PORTSQL=3306
 MARIADB_HOST=localhost
-MARIADB_USER=aleksandr
+MARIADB_USER=root
 MARIADB_PASSWORD=888Infinity
-MARIADB_DB=world
+MARIADB_DB=junior
